===================================
TSDuck Change Log and Release Notes
===================================

Version 3.12-739

- Added options --log-protocol and --log-data to "tsecmg", "tsemmg" and plugins
  "scrambler", "datainject".

- Many more descriptors are supported. See the user's guide.

- Bug fix: If an XML representation of a splice information table contained a
  splice_insert command, the <break_duration> structure was rejected when the
  event was marked as immediate.

- Bug fix: In "tsemmg", the TCP disconnection of the MUX was not detected in a
  timely fashion when data is injected using UDP.

- Regression fix: In plugin "datainject", the section mode was no longer handled
  correctly since version 3.10.

Version 3.11-715

- Added plugin "spliceinject" to inject SCTE 35 splice information in real time.

- Added options --sync-layout, --dump-datagram, --dump-udp, --dump-max and
  --skip to plugin "mpe".

- Added utility "tsemmg", an EMMG simulator for MUX integration testing.

- Added option --buffer-size in plugin "datainject". The plugin is now able to
  receive data using UDP, as defined in the DVB SimulCrypt protocol.

- SCTE 35 splice information tables can now be created from XML format.

- Bug fix: In "tstables" and plugin "tables", with options --xml and
  --max-tables, the XML structure was not properly closed.

- Bug fix: Application Information Tables (AIT) were not correctly serialized.

- Bug fix: In rare cases, time conversions could produce incorrect results when
  the time value was in the middle of the "non-existing hour", during the
  spring switch of daylight saving time. In practice, the problem occured on
  Linux when handling the "next change time" of a TOT and the system local
  time was UTC.

Version 3.10-672

- The utility "tstabdump" can now dump sections and files which are sent over
  UDP/IP by "tstables" or the plugin "tables". Command line options were added