@@ -1,3 +1,0 @@
-CONFIG += tsplugin
-TARGET = tsplugin_generic
-include(../tsduck.pri)
